theme/static/css/custom.css
/* ... */
.open_nav {
  cursor: pointer;
  float: right;
  font-family: FontAwesome;
  height: 20px;
  line-height: 30px;
  width: 20px
}

li.child-1>.open_nav {
  line-height: 46px
}

ul.widget-tabs>li:hover a {
  color: #3acf87;
}

p, .widget-text {
  word-wrap: break-word
}

.footer-links>li>a {
  display: inline
}

.footer-links>li {
  padding-top: 6px
}

li.dropdown ul li ul {
  left: 198px
}

.menu>li .current {
  color: #fff
}

.menu>li a {
  width: 100%;
}

#jPanelMenu-menu li li a {
  padding-left: 30px
}

.disabled {
  opacity: .2
}

.disabled:hover {
  background-color: #2f2f2f !important;
  cursor: not-allowed
}

.product-author {
  background-color: #f4f4f4;
  overflow: hidden;
  padding: 15px
}

.product-author h3 {
  line-height: 28px
}

.product-author section h3:hover {
  color: #3acf87
}

.onoffswitch {
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  position: relative;
  width: 58px
}

.onoffswitch-checkbox {
  display: none !important
}

.onoffswitch-label {
  background-color: #eee;
  border: 2px solid #999;
  border-radius: 30px;
  cursor: pointer;
  display: block;
  height: 30px;
  line-height: 30px;
  overflow: hidden;
  padding: 0;
  transition: background-color .3s ease-in
}

.onoffswitch-label:before {
  background: #fff;
  border: 2px solid #999;
  border-radius: 30px;
  bottom: 0;
  content: '';
  display: block;
  margin: 0;
  position: absolute;
  right: 26px;
  top: 0;
  transition: all .3s ease-in 0;
  width: 30px
}

.onoffswitch-checkbox:checked+.onoffswitch-label {
  background-color: #2ee8a7
}

.onoffswitch-checkbox:checked+.onoffswitch-label, .onoffswitch-checkbox:checked+.onoffswitch-label:before {
  border-color: #2ee8a7
}

.onoffswitch-checkbox:checked+.onoffswitch-label:before {
  right: 0
}

figure.blue-effect {
  background: #dcffee
}

figure.blue-effect:hover img {
  -moz-transform: scale(1.1);
  -webkit-transform: scale(1.1);
  -webkit-transition: all .35s;
  opacity: .8;
  transform: scale(1.1);
  transition: all .35s
}

figure.blue-effect img {
  -moz-transform: scale(1.0);
  -webkit-transform: scale(1.0);
  -webkit-transition: all .35s;
  opacity: 1;
  transform: scale(1.0);
  transition: all .35s
}

.portfolio-item img {
  -moz-transform: scale(1.0);
  -webkit-transform: scale(1.0);
  -webkit-transition: all .35s;
  transform: scale(1.0);
  transition: all .35s
}

.portfolio-item:hover img {
  -moz-transform: scale(1.1);
  -webkit-transform: scale(1.1);
  -webkit-transition: all .35s;
  transform: scale(1.1);
  transition: all .35s
}

.hover-icon:before {
  content: "\f105";
  font-family: "FontAwesome";
  font-size: xx-large;
  height: 19px;
  left: 20px;
  position: relative;
  top: 12px;
  width: 19px
}

#logo a img {
  height: 100px
}

.badge {
  background-color: #808080;
  font-weight: 700;
  text-transform: uppercase;
  padding: 5px 9px;
  display: inline-block;
  position: absolute;
  color: #fff;
  z-index: 10;
  top: 0;
  right: 0;
}
.badge.green {
  background-color: #4caf50;
}

.badge.red {
  background-color: #f44336;
}

.badge.type-2, .badge.yellow {
  background: #ffba35;
}

.badge.type-3, .badge.blue {
  background-color: #0e83cd;
}

.info {
  padding: 3px;
  font-weight: 600;
  font-size: 13px;
}
.info.red {
  color: #de5959;
}
.info.green {
  color: #3acf87;
}

/* .rub {
	line-height: 5px;
	width: 0.4em;
	border-bottom: 1px solid #000;
	display: inline-block;
} */

.order-container {
  overflow: auto
}

.order-thumb {
  float: left;
  margin: 8px 0
}

.order-thumb img {
  display: block;
  margin-bottom: 8px;
  width: 200px
}

.text-center, .order-info {
  text-align: center
}

.object-list.columns.masonry-item {
  width: 280px;
  margin-bottom: 20px;
  -webkit-box-shadow: 0 2px 8px 0 rgba(174, 174, 174, 0.5);
  -moz-box-shadow: 0 2px 8px 0 rgba(174, 174, 174, 0.5);
  box-shadow: 0 2px 8px 0 rgba(174, 174, 174, 0.5);
}

input.vFileBrowseField, input#id_featured_image {
  display: none;
}

div.shop-images {
  position: relative;
}

.shop-background-preview {
  position: absolute;
  width: 100%;
  top: 0px;
  overflow: hidden;
}

.shop-image-preview {
  position: absolute;
  right: 15px;
  top: -150px;
}

.profile-image-preview {
  position: absolute;
  left: 0px;
  top: 0px;
}

img.profile-image-preview-image {
  margin-top: 31px;
  margin-left: 5px;
}

.shop-background-preview .shop-background-preview-image {
  height: 200px !important;
  max-width: unset !important;
}

.shop-image-preview .shop-image-preview-image {
  border-radius: 50%;
  border: 3px #e9e9e9 solid;
  width: 200px;
  height: 200px;
}

.shop-background-preview:hover, a.shop-background-image:hover, a.shop-image:hover, .shop-image-preview .shop-image-preview-image:hover {
  border-color: #3acf87;
  color: #3acf87;
}

a.shop-background-image {
  border: 2px dashed;
  width: 100%;
  display: block;
  text-align: center;
  height: 200px;
  line-height: 200px;
  font-size: 32px;
  background: #e9e9e9;
  color: #888;
}

a.shop-image {
  border: 2px solid;
  border-radius: 50%;
  float: right;
  width: 200px;
  height: 200px;
  line-height: 200px;
  font-size: 18px;
  text-align: center;
  background: #f5f5f5;
  color: #888;
  position: absolute;
  right: 15px;
  top: -150px;
}

a.profile-image {
  display: block;
  border: 1px dashed;
  width: 300px;
  height: 200px;
  background: #f5f5f5;
}

@media (max-width: 767px) {
  .sticky {
    position: inherit;
    top: auto;
  }
  #style-switcher {
    top: 292px;
  }
  .cd-dropdown-wrapper {
    width: 100%;
  }
  .cd-dropdown-trigger::before {
    left: 95px;
  }
  .cd-dropdown-trigger::after {
    left: 100px;
  }
  .bss-slides figcaption h1 {
    font-size: 36px;
  }
  .bss-slides figcaption h2 {
    font-size: 30px;
  }
  .bss-slides figcaption h3 {
    font-size: 24px;
  }
  .bss-slides figcaption h4 {
    font-size: 18px;
  }
  .bss-slides figcaption h5, .bss-slides figcaption h6 {
    font-size: 14px;
  }
}
/* ... */

